# chapterize-whisper

./: .gitignore  README.md  example.py  pyproject.toml
chapterize/: audiobookshelf.py  chapterizer.py  const.py  main.py  metadata.py  transcribe.py  utils.py
