[tool.poetry]
name = "chapterize"
version = "0.1.0"
description = ""
authors = ["Jeff Stein <jeffstein@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faster-whisper = "^1.1.0"
rich = "^13.9.4"
pydub = "^0.25.1"
mutagen = "^1.47.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
